syntax = "proto3";

option csharp_namespace = "EncoderApp";

package greet;

// The greeting service definition.
service Encoder {
  // Sends a greeting
  rpc Encrypt (TextForEncrypt) returns (EncryptText);
  rpc GetInfo(InfoRequest) returns (InfoResponse);
}

// The request message containing the user's name.
message TextForEncrypt {
  string plainText = 1;
  sint32 key = 2;
}


// The response message containing the greetings.
message EncryptText {
  string response = 1;
}


message InfoRequest {}

message InfoResponse {
    string content=1;
}
